# pcog

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  style.md
cmake/: CheckGit.cmake  CodeCoverage.cmake  pcog-config.cmake.in  utils.cmake
include/pcog/: BBNode.hpp  Branching.hpp  BranchingSelection.hpp  ColorNodeWorker.hpp  ColorSolver.hpp  Coloring.hpp  Definitions.hpp  DenseGraph.hpp  DenseSet.hpp  GraphIO.hpp  GreedyColoring.hpp  LPSolver.hpp  LocalSolutionData.hpp  NodeMap.hpp  Preprocessing.hpp  SafeDualWeights.hpp  Settings.hpp  SolutionData.hpp  SparseSet.hpp  StableSetMaximizer.hpp  Statistics.hpp  TabuColoring.hpp  export.h  pcog.hpp
include/pcog/mwss/: AugmentingSearch.hpp  CombinatorialStableSet.hpp  WeightFunction.hpp
include/pcog/reduction/: CrownReduction.hpp  DenseReductionGraph.hpp  DominatedReduction.hpp  FoldDegreeTwoReduction.hpp  LowDegreeReduction.hpp  Reducer.hpp  ReductionStack.hpp  ReductionVertexQueue.hpp  SimplicialReduction.hpp  TwinDegreeThreeReduction.hpp  TwoFixingReduction.hpp
include/pcog/utilities/: Coloring.hpp  DenseGraph.hpp  DenseSet.hpp  NodeMap.hpp  Numerics.hpp  RbTree.hpp  SparseGraph.hpp
src/: BBNode.cpp  Branching.cpp  BranchingSelection.cpp  ColorNodeWorker.cpp  ColorSolver.cpp  Coloring.cpp  DenseGraph.cpp  DenseSet.cpp  GraphIO.cpp  GreedyColoring.cpp  LPSolver.cpp  LocalSolutionData.cpp  NodeMap.cpp  Numerics.cpp  Preprocessing.cpp  SafeDualWeights.cpp  Settings.cpp  SolutionData.cpp  SparseSet.cpp  StableSetMaximizer.cpp  Statistics.cpp  TabuColoring.cpp  config.h.in  git_version.cpp.in  git_version.h  main.cpp  pcog.cpp
src/mwss/: AugmentingSearch.cpp
src/reduction/: CrownReduction.cpp  DenseReductionGraph.cpp  DominatedReduction.cpp  FoldDegreeTwoReduction.cpp  LowDegreeReduction.cpp  Reducer.cpp  ReductionStack.cpp  ReductionVertexQueue.cpp  SimplicialReduction.cpp  TwinDegreeThreeReduction.cpp  TwoFixingReduction.cpp
src/utilities/: Coloring.cpp  DenseGraph.cpp  DenseSet.cpp  NodeMap.cpp  Numerics.cpp  SparseGraph.cpp  SparseSet.cpp
tests/: CMakeLists.txt  ColoringTest.cpp  DenseGraphTest.cpp  DenseSetTest.cpp  LPSolverTest.cpp  NodeMapTest.cpp  RbTreeTest.cpp  pcog_test.cpp  test_main.cpp
